k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: solana-hft
  labels:
    name: solana-hft
